[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/FrogAI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/monsters/opossum/opossum-1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/monsters/opossum/opossum-2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/monsters/opossum/opossum-3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/monsters/opossum/opossum-4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/monsters/opossum/opossum-5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/monsters/opossum/opossum-6.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sfx/sfx_sounds_damage3.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29, 3.9 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25.4409, 17.1305 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16.679, 13.5003 )

[node name="Opossum" type="KinematicBody2D"]
script = ExtResource( 1 )
explosion_path = "res://Scenes/Explosion.tscn"
sprite_is_left = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"
frame = 1
playing = true

[node name="FieldOfView" type="Area2D" parent="."]
editor/display_folded = true
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldOfView"]
scale = Vector2( 15, 10 )
shape = SubResource( 2 )

[node name="BodyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyArea"]
position = Vector2( 0, 10 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 14.63 )
shape = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 8 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="FieldOfView" to="." method="_on_FieldOfView_body_entered"]
[connection signal="body_entered" from="BodyArea" to="." method="_on_BodyArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
